Added p5.js examples

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -7,12 +7,20 @@
 <body>
     <h1>Nicoben's Coderdojo Resources</h1>
     <ul>
-        <li>...</li>
-        <li>...</li>
-        <li>...</li>
-        <li>...</li>
-        <li>...</li>
-        <li>...</li>
+        <li>P5.JS
+            <ul>
+                <li><a href="https://editor.p5js.org/nicoben/full/M2egTYWR">Keyboard events</a></li>
+                <li><a href="https://editor.p5js.org/nicoben/full/QlzgvbMd">Mouse coordinates</a></li>
+                <li><a href="https://editor.p5js.org/nicoben/full/e-3unP57">Mouse events</a></li>
+                <li><a href="https://editor.p5js.org/nicoben/full/mu57Ew1G">Translate / rotate / scale</a></li>
+            </ul>
+        </li>
+        <li>
+            <ul>
+                <li>...</li>
+                <li>...</li>
+            </ul>
+        </li>
     </ul>
 </body>
 
