--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Nicoben's Coderdojo Resources</h1>
     <ul>
-        <li>P5.JS
+        <li><strong>p5.js</strong>
             <ul>
                 <li><a href="https://editor.p5js.org/nicoben/full/M2egTYWR">Keyboard events</a></li>
                 <li><a href="https://editor.p5js.org/nicoben/full/QlzgvbMd">Mouse coordinates</a></li>
@@ -15,10 +15,9 @@
                 <li><a href="https://editor.p5js.org/nicoben/full/mu57Ew1G">Translate / rotate / scale</a></li>
             </ul>
         </li>
-        <li>
+        <li><strong>openprocessing.org</strong>
             <ul>
-                <li>...</li>
-                <li>...</li>
+                <li><a href="https://www.openprocessing.org/user/213111#sketches">My sketches</a></li>
             </ul>
         </li>
     </ul>
