--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -20,6 +20,11 @@
                 <li><a href="https://www.openprocessing.org/user/213111#sketches">My sketches</a></li>
             </ul>
         </li>
+        <li><strong>trinket.io</strong>
+            <ul>
+                <li><a href="https://trinket.io/python/845650c0d6">Python turtle - coordinates + headings</a></li>
+            </ul>
+        </li>
     </ul>
 </body>
 
