--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Nicoben's Coderdojo Resources</h1>
     <ul>
+
         <li><strong>p5.js</strong>
             <ul>
                 <li><a href="https://editor.p5js.org/nicoben/full/M2egTYWR">Keyboard events</a></li>
@@ -25,7 +26,122 @@
                 <li><a href="https://trinket.io/python/845650c0d6">Python turtle - coordinates + headings</a></li>
             </ul>
         </li>
+        <li><strong>jQuery</strong>
+            <ul>
+                <li><strong>W3Schools</strong>
+                    <ul>
+                        <li><a href="https://www.w3schools.com/jquery/default.asp">Main page</a></li>
+                        <li><em>Selectors</em>:
+                            <a href="https://www.w3schools.com/jquery/jquery_selectors.asp">introduction</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_ref_selectors.asp">reference</a> |
+                            <a href="https://www.w3schools.com/jquery/trysel.asp">tester</a>
+                        </li>
+                        <li><em>Events</em>:
+                            <a href="https://www.w3schools.com/jquery/jquery_events.asp">introduction</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_ref_events.asp">reference</a>
+                        </li>
+                        <li><em>Effects</em>:
+                            <a href="https://www.w3schools.com/jquery/jquery_hide_show.asp">hide/show</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_fade.asp">fade</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_slide.asp">slide</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_ref_effects.asp">reference</a>
+                        </li>
+                        <li><em>HTML</em>:
+                            <a href="https://www.w3schools.com/jquery/jquery_dom_get.asp">get</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_dom_set.asp">set</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_dom_add.asp">add</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_dom_remove.asp">remove</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_css_classes.asp">CSS</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_dimensions.asp">dimensions</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_ref_html.asp">reference</a>
+                        </li>
+                        <li><em>AJAX</em>:
+                            <a href="https://www.w3schools.com/jquery/jquery_ajax_intro.asp">introduction</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_ajax_load.asp">load</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_ajax_get_post.asp">get/post</a> |
+                            <a href="https://www.w3schools.com/jquery/jquery_ref_ajax.asp">reference</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li><strong>Colors</strong>
+            <ul>
+                <li><strong>W3Schools</strong>
+                    <ul>
+                        <li><a href="https://www.w3schools.com/colors/default.asp">Main page</a></li>
+                        <li><em>Colors</em>:
+                            <a href="https://www.w3schools.com/colors/colors_names.asp">names</a> |
+                            <a href="https://www.w3schools.com/colors/colors_hex.asp">values</a> |
+                            <a href="https://www.w3schools.com/colors/colors_groups.asp">groups</a> |
+                            <a href="https://www.w3schools.com/colors/colors_shades.asp">shades</a>
+                        </li>
+                        <li><em>Tools</em>:
+                            <a href="https://www.w3schools.com/colors/colors_picker.asp">picker</a> |
+                            <a href="https://www.w3schools.com/colors/colors_mixer.asp">mixer</a> |
+                            <a href="https://www.w3schools.com/colors/colors_converter.asp">converter</a> |
+                            <a href="https://www.w3schools.com/colors/colors_gradient.asp">gradient</a>
+                        </li>
+                        <li><em>Info</em>:
+                            <a href="https://www.w3schools.com/colors/colors_theory.asp">theory</a> |
+                            <a href="https://www.w3schools.com/colors/colors_wheels.asp">wheels</a> |
+                            <a href="https://www.w3schools.com/colors/colors_psychology.asp">psychology</a> |
+                            <a href="https://www.w3schools.com/colors/colors_schemes.asp">schemes</a>
+                        </li>
+                        <li><em>Schemes</em>:
+                            <a href="https://www.w3schools.com/colors/colors_palettes.asp">palettes</a> |
+                            <a href="https://www.w3schools.com/colors/colors_monochromatic.asp">monochromatic</a> |
+                            <a href="https://www.w3schools.com/colors/colors_analogous.asp">analogous</a> |
+                            <a href="https://www.w3schools.com/colors/colors_complementary.asp">complementary</a> |
+                            <a href="https://www.w3schools.com/colors/colors_triadic.asp">triadic</a> |
+                            <a href="https://www.w3schools.com/colors/colors_compound.asp">compound</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li><strong>Icons</strong>
+            <ul>
+                <li><strong>W3Schools</strong>:
+                    <a href="https://www.w3schools.com/icons/default.asp">introduction</a> |
+                    <a href="https://www.w3schools.com/icons/icons_reference.asp">reference</a> |
+                    <a href="https://www.w3schools.com/icons/fontawesome5_intro.asp">Font Awesome 5</a> |
+                    <a href="https://www.w3schools.com/icons/fontawesome_icons_intro.asp">Font Awesome 4</a> |
+                    <a href="https://www.w3schools.com/icons/bootstrap_icons_glyphicons.asp">Bootstrap</a> |
+                    <a href="https://www.w3schools.com/icons/google_icons_intro.asp">Google</a>
+                </li>
+            </ul>
+        </li>
+        <li><strong>Python</strong>
+            <ul>
+                <li><strong>Zetcode tutorials</strong>:
+                    <a href="http://zetcode.com/lang/python/">tutorial</a> |
+                    <a href="http://zetcode.com/python/fstring/">f-string</a> |
+                    <a href="http://zetcode.com/python/dataclass/">dataclass</a> |
+                    <a href="http://zetcode.com/python/hashing/">hashing</a> |
+                    <a href="http://zetcode.com/python/logging/">logging</a> |
+                    <a href="http://zetcode.com/python/argparse/">argparse</a> |
+                    <a href="http://zetcode.com/python/pytest/">Pytest</a> |
+                    <a href="http://zetcode.com/python/python-forloop/">for loop</a> |
+                    <a href="http://zetcode.com/python/reverse/">reverse</a> |
+                    <a href="http://zetcode.com/python/python-walrus/">walrus operator</a> |
+                    <a href="http://zetcode.com/python/lambda/">lambda functions</a> |
+                    <a href="http://zetcode.com/python/python-closures/">closures</a> |
+                    <a href="http://zetcode.com/python/python-decorators/">decorators</a> |
+                    <a href="http://zetcode.com/python/set/">set</a> |
+                    <a href="http://zetcode.com/python/python-map/">map</a> |
+                    <a href="http://zetcode.com/python/regularexpressions/">regular expressions</a> |
+                    <a href="http://zetcode.com/python/listcomprehensions/">list comprehensions</a> |
+                    <a href="http://zetcode.com/python/magicmethods/">magic methods</a> |
+                    <a href="http://zetcode.com/all/#python">all</a>
+                </li>
+            </ul>
+        </li>
+        <li><strong>For Oliver</strong>
+            <ul>
+                <li><a href="projects/oliver/index.html">Example</a></li>
+            </ul>
+        </li>
     </ul>
-</body>
 
 </html>
