--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -136,6 +136,12 @@
                     <a href="http://zetcode.com/all/#python">all</a>
                 </li>
             </ul>
+            <ul>
+                <li><strong>Thonny</strong>:
+                    <a href="https://thonny.org/">thonny.org</a> |
+                    <a href="https://pypi.org/project/thonny-black-format/">thonny-black-format</a>
+                </li>
+            </ul>
         </li>
         <li><strong>For Oliver</strong>
             <ul>
