Add W£Schools Python + JavaScript

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -119,6 +119,13 @@
                 </li>
             </ul>
             <ul>
+                <li><strong>W3Schools</strong>:
+                    <a href="https://www.w3schools.com/python/default.asp">tutorial</a> | 
+                    <a href="https://www.w3schools.com/python/python_examples.asp">example</a> |
+                    <a href="https://www.w3schools.com/python/python_reference.asp">reference</a> 
+                </li>
+            </ul>
+            <ul>
                 <li><strong>Zetcode tutorials</strong>:
                     <a href="http://zetcode.com/lang/python/">tutorial</a> |
                     <a href="http://zetcode.com/python/fstring/">f-string</a> |
@@ -174,7 +181,14 @@
                 </li>
             </ul>
             <ul>
-                <li><strong>PythonTutor</strong>:
+                <li><strong>W3Schools</strong>:
+                    <a href="https://www.w3schools.com/js/default.asp">tutorial</a> | 
+                    <a href="https://www.w3schools.com/js/js_examples.asp">examples</a> |
+                    <a href="https://www.w3schools.com/jsref/default.asp">reference</a> 
+                </li>
+            </ul>
+            <ul>
+                <li><strong>PythonTutor for JavaScript</strong>:
                     <a
                         href="http://www.pythontutor.com/visualize.html#code=function%20fact%28n%29%20%7B%0A%20%20%20%20if%20%28n%20%3C%3D%201%29%20%7B%0A%20%20%20%20%20%20return%201%3B%0A%20%20%20%20%7D%20else%20%7B%0A%20%20%20%20%20return%20n%20*%20fact%28n%20-%201%29%3B%0A%20%20%20%20%7D%0A%7D%0A%20%20%20%20%20%20%20%20%0Aconsole.log%28%22Factorial%20of%205%20%3D%205!%20%3D%22,%20fact%285%29%29%3B%0A%0Aclass%20Person%20%7B%0A%20%20%20%20constructor%28name,%20age%29%20%7B%0A%20%20%20%20%20%20%20%20this.name%20%3D%20name%3B%0A%20%20%20%20%20%20%20%20this.age%20%3D%20age%3B%0A%20%20%20%20%7D%0A%7D%0A%0Alet%20persons%20%3D%20%5B%0A%20%20%20%20new%20Person%28%22Bob%22,%2035%29,%0A%20%20%20%20new%20Person%28%22Alice%22,%2027%29,%0A%5D%3B%0A%0Aconsole.log%28persons%29%3B%0A%0Alet%20colors%20%3D%20%7B%0A%20%20%20%201%3A%20%5B%22red%22,%20%22%23ff0000%22%5D,%0A%20%20%20%202%3A%20%5B%22green%22,%20%22%2300ff00%22%5D,%0A%20%20%20%203%3A%20%5B%22blue%22,%20%22%230000ff%22%5D,%0A%7D%0A%0Aconsole.log%28colors%29%3B&cumulative=false&heapPrimitives=false&mode=edit&origin=opt-frontend.js&py=js&rawInputLstJSON=%5B%5D&testCasesJSON=%5B%22console.assert%28fact%280%29%20%3D%3D%3D%201%29%22,%22console.assert%28fact%281%29%20%3D%3D%3D%201%29%22,%22console.assert%28fact%282%29%20%3D%3D%3D%202%29%22,%22console.assert%28fact%283%29%20%3D%3D%3D%206%29%22,%22console.assert%28fact%284%29%20%3D%3D%3D%2024%29%22,%22console.assert%28fact%285%29%20%3D%3D%3D%20120%29%22%5D&textReferences=false">editor
                         & tests</a> |
