--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -121,7 +121,7 @@
             <ul>
                 <li><strong>W3Schools</strong>:
                     <a href="https://www.w3schools.com/python/default.asp">tutorial</a> | 
-                    <a href="https://www.w3schools.com/python/python_examples.asp">example</a> |
+                    <a href="https://www.w3schools.com/python/python_examples.asp">examples</a> |
                     <a href="https://www.w3schools.com/python/python_reference.asp">reference</a> 
                 </li>
             </ul>
@@ -206,6 +206,22 @@
                 <li><a href="projects/oliver/index.html">Example</a></li>
             </ul>
         </li>
+        <li><strong>IDEs for web development</strong>
+            <table>
+                <thead>
+                    <tr>
+                        <td></td>
+                        <td><a href="">Trinket</a></td>
+                        <td><a href="https://glitch.com/">Glitch</a></td>
+                        <td><a href="https://codepen.io/">Codepen</a></td>
+                        <td><a href="https://codesandbox.io/">CodeSandbox</a></td>
+                        <td><a href="https://jsfiddle.net/">JSFiddle</a></td>
+                        <td><a href="">StackBlitz</a></td>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </li>
     </ul>
-
 </html>
