Add App Inventor + Kodular

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -26,6 +26,11 @@
                 <li><a href="https://trinket.io/python/845650c0d6">Python turtle - coordinates + headings</a></li>
             </ul>
         </li>
+        <li><strong>CodeSandbox</strong>
+            <ul>
+                <li><a href="https://codesandbox.io/s/adoring-wu-vdkze">Basic template</a></li>
+            </ul>
+        </li>
         <li><strong>jQuery</strong>
             <ul>
                 <li><strong>W3Schools</strong>
@@ -120,9 +125,9 @@
             </ul>
             <ul>
                 <li><strong>W3Schools</strong>:
-                    <a href="https://www.w3schools.com/python/default.asp">tutorial</a> | 
+                    <a href="https://www.w3schools.com/python/default.asp">tutorial</a> |
                     <a href="https://www.w3schools.com/python/python_examples.asp">examples</a> |
-                    <a href="https://www.w3schools.com/python/python_reference.asp">reference</a> 
+                    <a href="https://www.w3schools.com/python/python_reference.asp">reference</a>
                 </li>
             </ul>
             <ul>
@@ -182,9 +187,9 @@
             </ul>
             <ul>
                 <li><strong>W3Schools</strong>:
-                    <a href="https://www.w3schools.com/js/default.asp">tutorial</a> | 
+                    <a href="https://www.w3schools.com/js/default.asp">tutorial</a> |
                     <a href="https://www.w3schools.com/js/js_examples.asp">examples</a> |
-                    <a href="https://www.w3schools.com/jsref/default.asp">reference</a> 
+                    <a href="https://www.w3schools.com/jsref/default.asp">reference</a>
                 </li>
             </ul>
             <ul>
@@ -201,27 +206,25 @@
                 </li>
             </ul>
         </li>
+        <li><strong>Godot</strong>:
+            <a href="https://godotengine.org/">main</a>
+        </li>
+        <li><strong>MIT App Inventor</strong>:
+            <a href="http://code.appinventor.mit.edu">main</a> |
+            <a href="https://appinventor.mit.edu/explore/get-started">get started</a> |
+            <a href="https://appinventor.mit.edu/explore/ai2/tutorials">tutorials</a>
+        </li>
+        <li><strong>Kodular</strong>:
+            <a href="http://kodular.io">main</a>
+        </li>
+        <li><strong>Android apps</strong>:
+            <a href="https://nicoben.github.io/Sticks.apk">Sticks</a>
+        </li>
         <li><strong>For Oliver</strong>
             <ul>
                 <li><a href="projects/oliver/index.html">Example</a></li>
             </ul>
         </li>
-        <li><strong>IDEs for web development</strong>
-            <table>
-                <thead>
-                    <tr>
-                        <td></td>
-                        <td><a href="">Trinket</a></td>
-                        <td><a href="https://glitch.com/">Glitch</a></td>
-                        <td><a href="https://codepen.io/">Codepen</a></td>
-                        <td><a href="https://codesandbox.io/">CodeSandbox</a></td>
-                        <td><a href="https://jsfiddle.net/">JSFiddle</a></td>
-                        <td><a href="">StackBlitz</a></td>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </li>
     </ul>
+
 </html>
