--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -218,6 +218,7 @@
             <a href="http://kodular.io">main</a>
         </li>
         <li><strong>Android apps</strong>:
+            <a href="https://nicoben.github.io/Calc.apk">Calc</a> |
             <a href="https://nicoben.github.io/Sticks.apk">Sticks</a>
         </li>
         <li><strong>For Oliver</strong>
