--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -370,7 +370,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 <script>
-    // $("section ul").hide();
+    $("section ul").hide();
 
     $("section").click(function () {
         $(this).find("ul").toggle();
