Add more resources

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -106,9 +106,9 @@
         </ul>
     </section>
 
-    <section id="A">
+    <section>
         <h2>Creating web applications</h2>
-        <section id="B">
+        <section>
             <h3>Client side</h3>
             <ul>
                 <li><strong>HTML</strong>:
@@ -194,7 +194,7 @@
                 </li>
             </ul>
         </section>
-        <section id="C">
+        <section>
             <h3>Server side</h3>
             <p>Under construction...</p>
         </section>
@@ -235,7 +235,10 @@
         <h2>Resources (audio, colors, fonts, icons, images)</h2>
         <ul>
             <li><strong>Audio</strong>: <a href="https://kenney.nl/assets?q=audio">Kenney</a></li>
-            <li><strong>Characters/Emoticons</strong>: <a href="https://html-css-js.com/html/character-codes/">html-css-js.com</a></li>
+            <li><strong>Characters/Emoticons</strong>: 
+                <a href="https://html-css-js.com/html/character-codes/">html-css-js.com</a>
+                <a href="http://unicode.org/Public/emoji/12.0/emoji-test.txt">list</a>
+            </li>
             <li><strong>Colors</strong>
                 <ul>
                     <li><a href="https://www.w3schools.com/colors/default.asp">Main page</a></li>
@@ -267,6 +270,15 @@
                     </li>
                 </ul>
             </li>
+            <li><strong>Data</strong>: 
+                <a href="https://www.fresherslive.com/current-affairs/article/list-of-countries-and-captial-currencies-and-continent-16">countries-capitals-currencies-continents</a>
+                <a href="https://datahub.io/core/country-codes">country codes</a>
+                <a href="https://datahub.io/core/currency-codes">currency codes</a>
+                <a href="https://datahub.io/core/continent-codes">continent codes</a>
+                <a href="https://datahub.io/core/world-cities">world cities</a>
+                <a href="https://datahub.io/core/language-codes">language cities</a>
+                <a href="https://restcountries.eu/">restcountries (API)</a>
+            </li>
             <li><strong>Fonts</strong>: <a href="https://fonts.google.com/">Google Fonts</a></li>
             <li><strong>Icons</strong>:
                 <a href="https://www.w3schools.com/icons/default.asp">introduction</a>
@@ -276,7 +288,10 @@
                 <a href="https://www.w3schools.com/icons/bootstrap_icons_glyphicons.asp">Bootstrap</a>
                 <a href="https://www.w3schools.com/icons/google_icons_intro.asp">Google</a>
             </li>
-            <li><strong>Images</strong>: <a href="https://kenney.nl/assets?q=2d">Kenney</a></li>
+            <li><strong>Images</strong>: 
+                <a href="https://kenney.nl/assets?q=2d">Kenney</a>
+                <a href="https://flagpedia.net/">flags</a>
+            </li>
         </ul>
     </section>
 
