Improve sections toggling

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -527,7 +527,7 @@
 
     // Option 1: click on headers
 
-    $("section h2").click(function () {
+    $("section h2,h3,h4,h5,h6").click(function () {
         $(this).parent().children(":not(h2,h3,h4,h5,h6)").toggle();
         return false;
     });
