--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Nicoben's Coderdojo Resources</title>
+    <title>Nicoben's CoderDojo Resources</title>
 </head>
 
 <body>
-    <h1>Nicoben's Coderdojo Resources</h1>
+    <h1>Nicoben's CoderDojo Resources</h1>
 
     <section>
         <h2>Programming with blocks (beginners)</h2>
@@ -363,171 +363,24 @@
     </section>
 </body>
 
-<!-- CSS from here  -->
+<!--
+=========================================================================================================
+CSS from here 
+=========================================================================================================
+-->
 
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap');
-
-    :root {
-        --main-color: darkgreen;
-        --main-bg-color: lemonchiffon;
-        --main-a-unvisited: darkgreen;
-        --main-a-visited: grey;
-
-        --main-emoticon-01: '🍇 ';
-        --main-emoticon-02: '🍋 ';
-        --main-emoticon-03: '🍒 ';
-        --main-emoticon-04: '🍍 ';
-        --main-emoticon-05: '🥑 ';
-        --main-emoticon-06: '🍡 ';
-        --main-emoticon-07: '🌽 ';
-        --main-emoticon-08: '🍑 ';
-        --main-emoticon-09: '🍆 ';
-        --main-emoticon-10: '🍏 ';
-        --main-emoticon-11: '🍓 ';
-        --main-emoticon-12: '🍈 ';
-        --main-emoticon-13: '🥕 ';
-        --main-emoticon-14: '🍎 ';
-        --main-emoticon-15: '🍧 ';
-        --main-emoticon-16: '🍉 ';
-        --main-emoticon-17: '🥗 ';
-        --main-emoticon-18: '🥥 ';
-        --main-emoticon-19: '🥤 ';
-        --main-emoticon-20: '🥔 ';
-    }
-
-    * {
-        font-family: 'Roboto', sans-serif;
-    }
-
-    body {
-        margin: auto;
-        padding: 10px;
-    }
-
-    h1 {
-        font-family: 'Orbitron', sans-serif;
-        letter-spacing: 0.1em;
-        font-size: 36;
-        background-color: var(--main-color);
-        color: white;
-        padding: 0.5em 0 0.5em 0.5em;
-        border-radius: 15px;
-    }
-
-    section {
-        margin-top: 1em;
-        padding: 0em 1em 0em 1em;
-        border: 4px dashed var(--main-color);
-        border-radius: 15px;
-        background: var(--main-bg-color);
-    }
-
-    section>section {
-        margin-bottom: 1em;
-        border-style: solid;
-        background-color: white;
-    }
-
-    section>h2 {
-        color: var(--main-color);
-        font-size: 18pt;
-        padding-top: 0;
-    }
-
-    section>h3 {
-        color: var(--main-color);
-        font-size: 18pt;
-        padding-top: 0;
-    }
-
-    li {
-        margin-top: 0.75em;
-    }
-
-    li li {
-        margin-top: 0;
-    }
-
-    a {
-        text-decoration: none;
-    }
-
-    a:link {
-        color: var(--main-a-unvisited);
-    }
-
-    a:visited {
-        color: var(--main-a-visited);
-    }
-
-    a:hover {
-        color: white;
-        background-color: var(--main-a-unvisited);
-    }
-
-    a+a:before {
-        content: ' / ';
-        color: black;
-    }
-
-    /* Icons from https://html-css-js.com/html/character-codes/icons/ */
-    h1:before {
-        content: '🌼 ';
-    }
-
-    h1:after {
-        content: ' 🌼';
-    }
-
-    body>section:nth-of-type(1) h2:before {
-        content: var(--main-emoticon-01);
-    }
-
-    body>section:nth-of-type(2) h2:before {
-        content: var(--main-emoticon-02);
-    }
-
-    body>section:nth-of-type(3) h2:before {
-        content: var(--main-emoticon-03);
-    }
-
-    body>section:nth-of-type(4) h2:before {
-        content: var(--main-emoticon-04);
-    }
-
-    body>section:nth-of-type(5) h2:before {
-        content: var(--main-emoticon-05);
-    }
-
-    body>section:nth-of-type(6) h2:before {
-        content: var(--main-emoticon-06);
-    }
-
-    body>section:nth-of-type(7) h2:before {
-        content: var(--main-emoticon-07);
-    }
-
-    body>section:nth-of-type(8) h2:before {
-        content: var(--main-emoticon-08);
-    }
-
-    body>section:nth-of-type(9) h2:before {
-        content: var(--main-emoticon-09);
-    }
+    @import url("styles/index.css");
 </style>
 
-<!-- Javascript from here -->
+<!--
+=========================================================================================================
+Javascript from here 
+=========================================================================================================
+-->
 
 <!-- This line so that we can use jQuery -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-<script>
-    $("section").children(":not(h2,h3,h4,h5,h6)").hide();
-
-    $("section h2,h3,h4,h5,h6").click(function () {
-        $(this).parent().children(":not(h2,h3,h4,h5,h6)").toggle();
-    });
-</script>
+<script type="text/javascript" src="scripts/index.js"></script>
 
 </html>
