--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -433,6 +433,7 @@
         <ul>
             <li><a href="https://github.com/">main</a></li>
             <li><a href="https://guides.github.com/activities/hello-world/">hello-world</a></li>
+            <li><a href="https://help.github.com/en">help</a></li>
         </ul>
     </section>
 
