--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -74,6 +74,9 @@
                     <a href="https://docs.python.org/3/tutorial/">tutorial</a>
                     <a href="https://docs.python.org/3/">documentation</a>
                 </li>
+                <li><strong>Computer Science Circles</strong>:
+                    <a href="https://cscircles.cemc.uwaterloo.ca/">main</a>
+                </li>
                 <li><strong>Zetcode tutorials</strong>:
                     <a href="http://zetcode.com/lang/python/">tutorial</a>
                     <a href="http://zetcode.com/python/fstring/">f-string</a>
