--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -448,6 +448,9 @@
                     <li><a href="projects/bingo/bingo-v4-html-css-js-animation.html">Bingo</a></li>
                 </ul>
                 <ul>
+                    <li><a href="projects/othello/index.html">Bingo</a></li>
+                </ul>
+                <ul>
                     <li><a href="projects/p5-spinner/spinner.html">Spinner</a></li>
                 </ul>
             </li>
