--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -115,6 +115,9 @@
                 <li><strong>Udacity</strong>:
                     <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">free course</a>
                 </li>
+                <li><strong>Books</strong>:
+                    <a href="https://automatetheboringstuff.com/">Automate the Boring Stuff with Python</a>
+                </li>
             </ul>
         </section>
         <section>
@@ -232,6 +235,11 @@
                     <a href="https://rupl.github.io/unfold/">3D unfold</a>
                 </li>
                 <li><strong>Javascript</strong>
+                    <ul>
+                        <li><strong>S2JS - Step by step tutorial with online editor</strong>:
+                            <a href="https://s2js.com/">main</a>
+                        </li>                    
+                    </ul>
                     <ul>
                         <li><strong>Grasshopper app</strong>:
                             <a href="http://grasshopper.app">main</a>
