--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -236,7 +236,7 @@
                 </li>
                 <li><strong>Javascript</strong>
                     <ul>
-                        <li><strong>S2JS - Step by step tutorial with online editor</strong>:
+                        <li><strong>S2JS - Transition from Scratch to Javascript (tutorial, online editor and online sharing)</strong>:
                             <a href="https://s2js.com/">main</a>
                         </li>                    
                     </ul>
