--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -29,6 +29,7 @@
                     <li><a href="https://chrome.google.com/webstore/detail/scratch-3-developer-tools/phacniajokfchdcamjhonkbhlcipplno?hl=en">Chrome extension - Scratch 3 Developer Tools</a></li>
                     <li><a href="https://leopardjs.com/">Tool - LeopardJS: convert a Scratch project to JavaScript</a></li>
                     <li><a href="https://sheeptester.github.io/htmlifier/?">Tool - HTMLifier: convert a Scratch project to HTML</a></li>
+                    <li><a href="https://ugc.futurelearn.com/uploads/files/bb/b7/bbb7596f-dbc6-4a06-a30d-0f6bce2d5547/Cheat-sheet-tunring-Scratch-into-Python-A3-DIGITAL.pdf">Cheatsheet - Turning Scratch into Python</a></li>
                 </ul>
             </li>
             <li><strong>Snap!</strong>: <a href="https://snap.berkeley.edu/">main</a></li>
@@ -483,6 +484,14 @@
                 <a href="https://nicoben.github.io/coderdojo/kodular/Calc.apk">Calc</a>
                 <a href="https://nicoben.github.io/coderdojo/kodular/Sticks_before_FB.apk">Sticks</a>
             </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Machine Learning</h2>
+        <ul>
+            <li><strong><a href="https://machinelearningforkids.co.uk/">Machine Learning for Kids</a></strong></li>
+            <li><strong><a href="https://teachablemachine.withgoogle.com/">Teachable Machine</a></strong></li>
         </ul>
     </section>
 
