Add SCM activity

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -467,11 +467,7 @@
             <li><strong>For Keiko</strong>
                 <ul>
                     <li><a href="projects/bingo/bingo-v4-html-css-js-animation.html">Bingo</a></li>
-                </ul>
-                <ul>
                     <li><a href="projects/othello/index.html">Othello</a></li>
-                </ul>
-                <ul>
                     <li><a href="projects/p5-spinner/spinner.html">Spinner</a></li>
                 </ul>
             </li>
@@ -483,6 +479,11 @@
             <li><strong>Android apps</strong>:
                 <a href="https://nicoben.github.io/coderdojo/kodular/Calc.apk">Calc</a>
                 <a href="https://nicoben.github.io/coderdojo/kodular/Sticks_before_FB.apk">Sticks</a>
+            </li>
+            <li><strong>For SCM</strong>
+                <ul>
+                    <li><a href="scm/treasure-hunt/index.html">Treasure Hunt activity</a></li>
+                </ul>
             </li>
         </ul>
     </section>
